<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ic_logo_sign_in" />

            <de.feelberlin.android.view.FBTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/sign_in_header_text"
                android:textAllCaps="false"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/text_size"
                app:font="light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/text_size" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:drawablePadding="20dp"
                        android:drawableStart="@drawable/password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_size" />

                    <de.feelberlin.android.view.FBTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/forgot_password"
                        android:textAllCaps="false"
                        android:textColor="@color/gray_text"
                        android:textSize="@dimen/text_size"
                        app:font="light" />
                </RelativeLayout>

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:paddingStart="10dp"
                    android:text="@string/keep_me_signed_in"
                    android:textColor="@color/gray_text"
                    app:buttonTint="@color/colorPrimary" />

                <de.feelberlin.android.view.FBButton
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/bg_button_rounded"
                    android:paddingEnd="80dp"
                    android:paddingStart="80dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:font="semibold" />

                <de.feelberlin.android.view.FBTextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/skip_step"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray_text"
                    app:font="ultralight" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingBottom="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_gray_text" />

                <de.feelberlin.android.view.FBTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:text="@string/don_t_have_an_account"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray_text"
                    app:font="light" />


                <de.feelberlin.android.view.FBTextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="30dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_text"
                    app:font="semibold" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
