<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/signup_logo" />

            <de.feelberlin.android.view.FBTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:font="semibold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="30dp">

                <de.feelberlin.android.view.FBEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/profile"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textSize="@dimen/text_size" />

                <de.feelberlin.android.view.FBEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/text_size" />

                <de.feelberlin.android.view.FBEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/text_size" />

                <de.feelberlin.android.view.FBEditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/birthday"
                    android:hint="@string/bday"
                    android:inputType="date"
                    android:textSize="@dimen/text_size" />

                <de.feelberlin.android.view.FBButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bg_button_rounded"
                    android:paddingEnd="80dp"
                    android:paddingStart="80dp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    app:font="semibold" />

                <de.feelberlin.android.view.FBTextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/skip_step"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray_text"
                    app:font="ultralight" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_gray_text" />

                <de.feelberlin.android.view.FBTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="true"
                    android:textColor="@color/light_gray_text"
                    app:font="light" />


                <de.feelberlin.android.view.FBTextView
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingEnd="30dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@color/gray_text"
                    app:font="semibold" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
