<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <include layout="@layout/toolbar_white" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/qr_demo" />

            <de.feelberlin.android.view.FBTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="0.1234324 FDWV"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <de.feelberlin.android.view.FBTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/your_qr_has_been_created"
                android:textAllCaps="true"
                android:textColor="@color/gray_text"
                android:textSize="16sp" />

            <de.feelberlin.android.view.FBTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingEnd="30dp"
                android:paddingStart="30dp"
                android:text="@string/download_your_qr"
                android:textColor="@color/gray_text"
                android:textSize="14sp" />

            <de.feelberlin.android.view.FBButton
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <de.feelberlin.android.view.FBTextView
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="35dp"
                android:text="@string/edit_profile"
                android:textAllCaps="true"
                android:textColor="@color/light_gray_text" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
